--- a/FeatureExtraction.csproj
+++ b/FeatureExtraction.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="docs\" />
+  </ItemGroup>
+
 </Project>
